samples/_failures_safe/1761372411_3fc504_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eeab0014.c: In function ‘main’:
./samples/SAFE/__tmp_eeab0014.c:160:9: error: expected expression at end of input
  160 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_eeab0014.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eeab0014.c:160:9: error: expected declaration or statement at end of input
